k8s.tls/qbox-frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
#  minReadySeconds: 10
#  strategy:
#    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 0
#      maxSurge: 1
  template:
    metadata:
      labels:
        app: qbox
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: jakob.azurecr.io/qboxcoreweb:8.0
        # volumeMounts:
        # - mountPath: "/var/lib/storage"
        #   name: volume        
        ports:
        - containerPort: 80
        # readinessProbe:
        #   httpGet:
        #     path: /api/health
        #     port: 80
        #   initialDelaySeconds: 3
        #   periodSeconds: 3 
        imagePullPolicy: Always
      # volumes:
      #   - name: volume
      #     persistentVolumeClaim:
      #       claimName: azurefile
