k8s.tls/qbox-frontend-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: qbox
spec:
  selector:
    app: qbox
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      
  type: ClusterIP
