k8s.tls/qbox-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qbox
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: qbox-yy.78212448ba524a099f48.westeurope.aksapp.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
